@@ -1,4 +1,8 @@
 
+2021-04-30  Ron Norman <rjn@inglenet.com>
+
+	* cobfile.c: Now able to generate COBOL program to copy file
+
 2021-04-27  Ron Norman <rjn@inglenet.com>
 
 	* cobfile.c: Initial version of file copy program
